<resources>
    <string name="app_name">Waiting List Manager</string>
    <string name="smart_helper_calc">Waiting List Manager</string>

    <string name="enter_keyword">Enter Keywords..</string>


    <!--Tab bar icons of Font awesome-->
    <string name="fa_calc">&#xf1ec;</string>
    <string name="fa_currency">&#xf0d6;</string>
    <string name="fa_calender">&#xf073;</string>
    <string name="fa_rupee">&#xf156;</string>
    <string name="fa_arrow_both_side">&#xf07e;</string>
    <string name="fa_dollar">&#xf155;</string>
    <string name="fa_file">&#xf15c;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="alpha_icon">&#xf086;</string>
    <string name="me_icon">&#xf007;</string>
    <string name="icon_heart">&#xf004;</string>

    <string name="send">Send</string>

    <string name="manage_customer">Manage Customers</string>
    <string name="manage_customer_history">Manage Customers History</string>
    <string name="manage_customer_search">Search Manage Customers</string>

    <string name="reset">Reset</string>
    <string name="allocate_table">Allocate table</string>
    <string name="seated">Mark As Seated</string>
    <string name="add_item">Add Item</string>
    <string name="print">Print</string>

    <string name="add_new_customer">Add new customer</string>

    <string name="dummy_name">Kamlesh Gorasiya</string>
    <string name="dummy_address">A-95- Tulsidarshan society, Yogi chowk, Varachha, Surat, Gujarat-395010</string>
    <string name="dummy_gst">24ABDEWRSC192015S</string>
    <string name="dummy_numberofperson">10</string>
    <string name="dummy_date">10/03/2019 05:06 PM</string>

    <string name="length_validation">length must be between %d to %d character</string>

    <string name="add">Add</string>
    <string name="new_customer">New</string>
    <string name="search_customer">Search Customer</string>
    <string name="clear_search">Clear Search</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>


    <string name="customer_name">Customer Name</string>
    <string name="gst_number">GST Number</string>
    <string name="number_of_person">Number Of Person</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="save_customer">Save Customer</string>


    <string name="update_customer_details">Update Customer</string>
    <string name="no_customer_available">No Customers available, Please Add new customer</string>
    <string name="dummy_email">kamlesh.gorasiya@gmail.com</string>
    <string name="dummy_mobile">9227350852</string>
    <string name="dummy_product_name">Paper silk saree</string>
    <string name="dummy_hsn_code">7054</string>
    <string name="dummy_gst_slab">12</string>
    <string name="dummy_price">1200</string>
    <string name="dummy_discount">10</string>


    <string name="date">Date</string>
    <string name="dummy_dates">10/03/2019</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="start_amount">Start Amount:</string>
    <string name="end_amount">End Amount:</string>
    <string name="total_amount">Total Amount</string>
    <string name="no_filter">No</string>
    <string name="filter_customer">Yes</string>
    <string name="start_date_required_and_format_error">Start Date is must be in the dd/MM/YYYY.  Eg. => 31/12/2019</string>
    <string name="end_date_required_and_format_error">End Date is must be in the dd/MM/YYYY.  Eg. => 31/12/2019</string>

    <string name="select_customer">Select Customer</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="required_field_message">must not be blank.</string>
    <string name="length_error"> length must not less than %d and more than %d character.</string>
    <string name="input_error"> Please Enter Valid Customer Name</string>
    <string name="person_error">  more than %d.</string>
    <string name="mobile_error"> Please Enter Valid Phone Number.</string>
    <string name="please_enter_valida_email_address">Please enter valid email address.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="are_your_sure_to_delete">Are you sure you want to delete this %1s</string>
    <string name="please_enter_table_number">Please Enter Table Number</string>
    <string name="table_number">Table Number</string>
    <string name="table_error"> Please Enter Valid Table Number.</string>
    <string name="customer">Customer</string>


    <string name="no_whatsapp_found">No WhatsApp found.</string>

    <string name="person_10">10</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="amount_from">Amount From</string>
    <string name="to">To</string>
    <string name="date_from">Date From</string>
    <string name="order_period">Order Period</string>
    <string name="jhhjhgjjgh" />
    <string name="jhgjgh">27/02/2016</string>

    <string-array name="names">
        <item>Select Order Period</item>
        <item>Last 10 Orders.</item>
        <item>View Last Week </item>
        <item>View Last Month</item>
    </string-array>


</resources>
