<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idCvCustomerItem"
    style="@style/card_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    app:cardCornerRadius="@dimen/dp5">

    <LinearLayout
        style="@style/card_view_child_style"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/idTvCustomerName"
                    style="@style/history_heading_text"
                    android:drawableLeft="@drawable/ic_group"
                    android:drawablePadding="@dimen/dp5" />
                <TextView
                    android:id="@+id/idTvDate"
                    style="@style/history_heading_text"
                    android:drawableLeft="@drawable/ic_date"
                    android:drawablePadding="@dimen/dp5" />
                <TextView
                    android:id="@+id/tableno"
                    style="@style/history_heading_text"
                    android:textColor="#226CFD"
                    android:text="@string/dummy_price"
                    android:layout_marginLeft="@dimen/dp4"
                    android:drawableLeft="@drawable/img_rupee_circle_bg_primary"
                    android:drawablePadding="@dimen/dp5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/idTvNumberOfPerson"
                    style="@style/heading_text_2"
                    android:background="@drawable/icon_background_red"
                    android:gravity="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>
        </LinearLayout>


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp10"
             android:gravity="center_vertical"
             android:orientation="horizontal">


             <ImageView
                 android:id="@+id/idTvCustomerPhone"
                 style="@style/icon_style"
                 android:layout_marginLeft="@dimen/dp0"
                 android:src="@drawable/ic_call" />

             <ImageView
                 android:id="@+id/idIVMessageCustomer"
                 style="@style/icon_style"
                 android:src="@drawable/ic_message" />

             <ImageView
                 android:id="@+id/idIVWhatsAppCustomer"
                 style="@style/icon_style"
                 android:src="@drawable/ic_whatsapp" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:orientation="horizontal">
                 <Button
                     android:id="@+id/idBtnItem"
                     android:layout_marginLeft="@dimen/dp5"
                     android:layout_marginRight="@dimen/dp5"
                     style="@style/single_button_style"
                     android:layout_width="wrap_content"
                     android:text="@string/add_item" />

                 <Button
                     android:id="@+id/idBtnPrint"
                     style="@style/single_button_style"
                     android:layout_width="wrap_content"
                     android:text="@string/print" />

            </LinearLayout>
         </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>